--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><strong>Bachelor's</strong> : Rajkiya Engineering College, Sonbhadra </li>
     </ul>
     <hr>
-    <table cellspacing="5">
+    <!--<table cellspacing="5">
 
         <thead>
             <tr>
@@ -58,7 +58,7 @@
             <td>2021</td>
             <td>Rajkiya Engineering College, Sonbhadra</td>
         </tr>
-    </table>
+    </table>-->
     <hr>
     <h3>Hobbies</h3>
     <ol>
